--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -9,9 +9,9 @@ app_login:
     controller: App\Controller\SecurityController::login
     methods: ['GET', 'POST']
 
-app_home:
-    path: /
-    controller: Symfony\Bundle\FrameworkBundle\Controller\RedirectController::redirectAction
-    defaults:
-        route: app_login
-        permanent: true
+# app_home:
+#     path: /
+#     controller: Symfony\Bundle\FrameworkBundle\Controller\RedirectController::redirectAction
+#     defaults:
+#         route: app_login
+#         permanent: true
