--- a/config/services.yaml
+++ b/config/services.yaml
@@ -10,6 +10,7 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+                public: false
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -19,6 +20,15 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+            - '../src/Migrations/'
 
+ # Autoriser l'injection de l'entité Patient
+    App\Entity\Patient: ~
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    # Configure ApiService with specific dependencies
+    App\Service\ApiService:
+        arguments:
+            $client: '@http_client'  # Injects the HttpClient service
+            $logger: '@logger'       # Injects the Logger service
